# object-tracking

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  config.ini  docker-compose.yml  flake.nix  version.h.in
cmake/: FindONNXRuntime.cmake
config/: config.ini
doc/: Doxyfile
scripts/: build.sh  docker-build.sh  docker-run.sh  onnx_finder.sh  run.sh  run_test.sh  runtime-log-config.sh
src/: main.cc  main.h
src/core/: frame.h  frame_source.cc  frame_source.h  image_process.h  onnx_model.cc  onnx_model.h
src/frames/: camera.h  video.h
src/processors/: display.cc  display.h  preprocessor.cc  preprocessor.h  tracker.cc  tracker.h
src/utilities/: config.cc  config.h  logger.h  ring_buffer.h  thread_pool.h  thread_safe_queue.h
test/: CMakeLists.txt  camera.cc  logger.cc  logger_test.cc  main.cc  main.h  main_test.cc  onnx_test.cc  ring_buffer.cc  unit_test.h  video.cc
test/onnx_test/: CMakeLists.txt  test_onnx.cc
